--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=workchat
 # database configuration
 spring.datasource.url=jdbc:mysql://localhost:3306/workchat
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=system
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 #EntityNaming
